[package]
name = "devenv"
version = "0.1.0"
authors = ["isra17 <isra017@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
snafu = "0.6"
